2002-09-25  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java (test):
	Updated to behavior specified in JDK 1.4.1.

2002-09-20  Daryl Lee <dol@sources.redhat.com>
	* Added remaing java.io.BufferedInputStream method tests to SimpleRead.java

2002-09-16  Daryl Lee <dol@sources.redhat.com>
	* removed gnu/testlet/java/io/RandomAccssFile/raf.java in favor
	of jdk11.java

2002-09-16  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/RandomAccessFile/jdk11.java: Full test
	of all methods and constructors in class.  Supersedes raf.java

2002-09-14  Stephen Crawley <crawley@dstc.edu.au>
	* .cvsignore: New file. Tell CVS to ignore various generated
	files, log files, temporary files and so on.
	* gnu/testlet/.cvsignore: Ignore config.java - it is generated
	* CVSROOT/cvsignore: New File.  Ignore all Java bytecode files.
	* gnu/testlet/java/io/RandomAccessFile/raf.java: Avoid going
	into an infinite loop if seekBytes seeks beyond the end-of-file.

2002-09-11  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/Socket/MySocketImpl.java (connect,
	sendUrgentData): Add dummy implementations from 1.4.

2002-09-03  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/reflect.java (test) [getMethod with
	superinterface]: Pass `false' as `declared' argument to
	getMethod.

2002-09-01  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/Socket/MySocketImpl.java: Add dummy
	implementations for shutdownInput() and shutdownOutput() from 1.3.

2002-08-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/getBytes.java: Add two tests for
	substrings.

2002-08-13  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/RandomAccessFile/raf.java (test): Don't use
	System.out.

	* gnu/testlet/java/io/RandomAccessFile/raf.java: New file.
	Derived from test by Jesse Rosenstock <jmr@fulcrummicro.com>.

2002-07-30  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/equals.java: New test.
