@@ -411,9 +411,7 @@ public class FloatTest implements Testlet
 
 		harness.check(!( d1.byteValue() != 123 ), 
 			"Error: test_shortbyteValue failed - 4" );
-		// 400 doesn't fit in a byte value, so it is
-		// truncated.
-		harness.check(!( d2.byteValue() != (byte)127 ), 
+		harness.check(!( d2.byteValue() != (byte) 400 ), 
 			"Error: test_shortbyteValue failed - 5" );
 		harness.check(!( d3.byteValue() != 0 ), 
 			"Error: test_shortbyteValue failed - 6" );
