@@ -1,10 +1,18 @@
+2002-09-26  Stephen Crawley <crawley@dstc.edu.au>
+        * gnu/testlet/java/lang/Double/DoubleTest.java (test_shortbyteValue):
+	Reverted test for truncation in byteValue() to match JDK 1.4 spec
+	and implementation.  [This was incorrectly 'fixed' on 2002-06-13.]
+        * gnu/testlet/java/lang/Float/FloatTest.java (test_shortbyteValue):
+	ditto
+
 2002-09-25  Eric Blake  <ebb9@email.byu.edu>
 
 	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java (test):
 	Updated to behavior specified in JDK 1.4.1.
 
 2002-09-20  Daryl Lee <dol@sources.redhat.com>
-	* Added remaing java.io.BufferedInputStream method tests to SimpleRead.java
+	* Added remaing java.io.BufferedInputStream method tests to
+	SimpleRead.java
 
 2002-09-16  Daryl Lee <dol@sources.redhat.com>
 	* removed gnu/testlet/java/io/RandomAccssFile/raf.java in favor
